--- a/README
+++ b/README
@@ -14,11 +14,10 @@ Materials
 
 Quick Setup
 ===========
-To just get things up and running, here's what to do:
 
 Hooking the N64 to the Arduino
 ------------------------------
-The N64 controller cord had 3 wires: ground, +3.3V, and data. The pin-out is shown in Figure 1 (left).
+The N64 controller cable had 3 wires: ground, +3.3V, and data. The pin-out is shown in Figure 1 (left).
 
 1. +3.3V (red) - connect to 3.3v
 
@@ -26,8 +25,7 @@ The N64 controller cord had 3 wires: ground, +3.3V, and data. The pin-out is sho
 
 3. GND (black) - connect to Arduino ground
 
-The wire colors may or may not vary depending on the model, I would check that
-the wire colors match the pin-out before you connect them up.
+The wire colors may vary, check that the wire colors match the pin-out before you connect them up.
 
 .. figure:: https://github.com/brownan/Gamecube-N64-Controller/raw/master/connections.png
     :alt: Gamecube and N64 controller connections
@@ -37,7 +35,7 @@ the wire colors match the pin-out before you connect them up.
 
 Hooking up the Gamecube controller to the Arduino
 -------------------------------------------------
-The GC controller cord had 5 wires: +5V, +3.3V, data, 2x ground. The pin-out is shown in Figure 1 (right).
+The GC controller cable had 5 wires: +5V, +3.3V, data, 2x ground. The pin-out is shown in Figure 1 (right).
 
 1. +5V (White) - connect to Arduino +5V supply
 
@@ -51,8 +49,8 @@ The GC controller cord had 5 wires: +5V, +3.3V, data, 2x ground. The pin-out is 
 
 6. +3.3V (Green) - connect to Arduino +3.3V supply
 
-The internal wire colors may vary from the ones listed here. Verify the
-colors match the actual pin-out.
+Same as N64 cable, the wire colors may vary, check that the wire colors match the pin-out before you connect them up.
+
 
 
 Attaching the Pull-up Resistor
@@ -61,33 +59,30 @@ The protocol requires the data line to be idle-high, so **attach the 1K
 resistor between digital I/O 2 and the 3.3V supply**. This will keep the line
 at 3.3V unless the Arduino or the controller pulls it down to ground.
 
-Compiling the Code
-------------------
-``gamecube.pde`` provided is the entire source. You can open it with the
-Arduino IDE and compile it, that should work. I've also provided a Makefile
-that I used when developing it (since I needed to analyze the pre-assembled
-code). If you use the makefile, you may need to edit the top for the locations
-of the Arduino libraries.
-
-Running it
-----------
-Once the code is loaded on the Arduino, and everything is hooked up, it's ready
-to use. When the Arduino first powers up, it waits for a signal from the N64.
-**Therefore, the Arduino must be powered on and ready (wait a couple seconds)
-before the N64 is turned on**. Then turn the N64 on and it should be good to go.
-
-If you turn the N64 off to e.g. load a new game, you'll need to reset the
-Arduino. Just hit the reset button when the N64 is off before you turn it back
-on.
-
-I've tested this with every game I have, and it works with both wired
-controllers and the wavebird. I haven't tried it with any third party
-controllers.
 
 Configuration
 =============
-There are two things that people may want to customize. Both of them require
-editing source code, I didn't make any easy or dynamic interface to them.
+To edit the button mapping, edit `gamecube.ino` from line 172.
+
+Default mapping  is:
+
+| N64  | GC |
+| ------------- | ------------- |
+|A|A|
+|B|B|
+|CLEFT|Y, CLEFT
+|CRIGHT|X, CRIGHT
+|CUP|CUP|
+|CDOWN|CDOWN|
+|DLEFT|DLEFT|
+|DRIGHT|DRIGHT|
+|DUP|DUP|
+|DDOWN|DDOWN|
+|START|START|
+|Z|L,Z|
+|L|UNMAPPED|
+|R|R|
+
 
 This is done with Bitwise operations, here's an example of how I mapped GC-L to N64-L:
 Original Button Mapping:
